[SMT]: Update product by id & remove product by id Operations
